[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Press_E.tscn" type="PackedScene" id=1]
[ext_resource path="res://GFX/Items/shovel.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Objects/Shovel.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.6803, 48.3789 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.4083, 25.2976 )

[node name="Shovel" type="Area2D"]
collision_layer = 4
collision_mask = 2147483649
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2.2981, -3.18198 )
shape = SubResource( 2 )

[node name="Press_E" parent="." instance=ExtResource( 1 )]
position = Vector2( 7.57263, -55.4584 )
frame = 1
[connection signal="body_entered" from="." to="." method="_on_Shovel_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shovel_body_exited"]
